--- a/src/styles/default/index.scss
+++ b/src/styles/default/index.scss
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700&display=swap&subset=chinese-traditional');
 
 * {
   -webkit-overflow-scrolling: touch;
+}
+
+body {
+  font-family: 'Roboto', 'Noto Sans TC', sans-serif !important;
 }
 
 // ant design
