--- a/src/styles/default/index.scss
+++ b/src/styles/default/index.scss
@@ -83,6 +83,10 @@ body {
   cursor: pointer;
 }
 
+.modal-footer-hiden-button {
+  display: none;
+}
+
 // color palette
 :root {
   --primary: #1890ff;
