--- a/src/styles/default/index.scss
+++ b/src/styles/default/index.scss
@@ -1,18 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700&display=swap&subset=chinese-traditional');
-
-* {
-  -webkit-overflow-scrolling: touch;
-}
-
-body {
-  font-family: 'Roboto', 'Noto Sans TC', sans-serif !important;
-}
-
 // ant design
 .ant-btn {
+  display: flex;
   span {
-    line-height: normal;
+    margin: auto;
+    line-height: 1;
   }
   .anticon {
     line-height: 0;
@@ -47,56 +38,4 @@ body {
 .ant-select-tree li {
   overflow: hidden;
   max-width: 432px;
-}
-
-// custom component
-.header-logo {
-  max-width: 120px;
-  height: 36px;
-  object-fit: contain;
-
-  @media (min-width: 992px) {
-    & {
-      max-width: 172px;
-      height: 36px;
-    }
-  }
-}
-
-.short-bf-content {
-  height: 160px;
-}
-
-.bg-white {
-  background: white;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.modal-footer-hidden-button {
-  display: none;
-}
-
-// color palette
-:root {
-  --primary: #1890ff;
-  --success: #4ed1b3;
-  --warning: #ffbe1e;
-  --error: #ff7d62;
-  --gray-darker: #585858;
-  --gray: #cdcece;
-  --gray-light: #ececec;
-  --gray-lighter: #f7f8f8;
-  --gray-dark: #9b9b9b;
-  --black-45: rgba(0, 0, 0, 0.45);
 }
